# skilldesk-project-brief

./: .gitignore  AGENTS.md  CHANGELOG.md  DATA_MODEL.md  DECISIONS.md  MVP.md  README.md  ROADMAP.md  SCAFFOLD_PLAN.md  SECURITY.md  TABLE_SPEC.md  UI_SPEC.md  UI_STATES.md  UX_FLOWS.md  skilldesk-project-brief.md
.github/workflows/: ci.yml
skilldesk/: README.md  index.html  package.json  pnpm-lock.yaml
skilldesk/src/: App.css  App.tsx  index.css
skilldesk/src-tauri/: Cargo.toml  tauri.conf.json
skilldesk/src-tauri/src/: exporter.rs  lib.rs  scanner.rs
skilldesk/src-tauri/src/scanner/: common.rs  entities.rs  git.rs  health.rs  mcp.rs  roots.rs
skilldesk/src/app/: cache.ts  exportReport.ts  i18n.ts
skilldesk/src/components/: ui.tsx
skilldesk/src/features/: viewState.ts  views.tsx
skilldesk/src/fixtures/: index.ts  scanReport.ts
skilldesk/src/model/: index.ts  schema.ts  settings.ts  totals.ts  types.ts
skilldesk/src/test/: App.render.test.tsx  cache.test.ts  exportReport.test.ts  i18n.test.ts  model.test.ts  scanReportSchema.test.ts
