[package]
name = "skilldesk"
version = "0.1.0"
description = "Chinese-first local health dashboard for agent extensions."
authors = ["haodehaode378"]
license = "MIT"
repository = "https://github.com/haodehaode378/skilldesk-project-brief"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.9"
